rustdocs/errors/rust-bitcoin-bitcoin-src-blockdata-script-instruction.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:56:9
   |
56 |     pub(super) fn script_serialized_len(&self) -> usize {
   |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:102:9
    |
102 |     pub(super) fn kill(&mut self) {
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:111:9
    |
111 |     pub(super) fn take_slice_or_kill(&mut self, len: u32) -> Result<&'a...
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:126:9
    |
126 |     pub(super) fn next_push_data_len(
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:223:9
    |
223 |     pub(super) fn from_instructions(instructions: Instructions<'a>) -> ...
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:227:9
    |
227 |     pub(super) fn remaining_bytes(&self) -> usize { self.instructions.r...
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:233:9
    |
233 |     pub(super) fn next_with<F: FnOnce(&mut Self) -> Option<Result<Instr...
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:5:5
  |
5 | use super::{Error, PushBytes, Script, ScriptBufExtPriv as _};
  |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:3:5
  |
3 | use internals::script::{self, PushDataLenLen};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
3 + extern crate internals;
  |

error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:3:5
  |
3 | use internals::script::{self, PushDataLenLen};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
3 + extern crate internals;
  |

error[E0432]: unresolved import `crate::opcodes`
 --> ../rust-bitcoin/bitcoin/src/blockdata/script/instruction.rs:6:22
  |
6 | use crate::opcodes::{self, Opcode};
  |            -------   ^^^^ no `opcodes` in the root
  |            |
  |            help: a similar name exists in the module: `Opcode`

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
